fix: full swipe text align

--- a/src/ui/components/MyWallets/MyWallets.scss
+++ b/src/ui/components/MyWallets/MyWallets.scss
@@ -21,6 +21,10 @@
         transition: transform 0.35s linear;
       }
 
+      &.item-sliding-active-swipe-end .delete-button {
+        width: 120vw;
+      }
+
       ion-item {
         --inner-padding-end: 0;
 
